--- a/index.html
+++ b/index.html
@@ -237,10 +237,10 @@
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
                         <li>
-                          <a href="#"><i class="fa fa-linkedin"></i></a>
+                          <a href="https://www.linkedin.com/in/slobodanka-pilipovic-a4491a121/"><i class="fa fa-linkedin"></i></a>
                         </li>
 <li>
-                          <a href="#"><i class="fa fa-github"></i></a>
+                          <a href="https://github.com/slobns"><i class="fa fa-github"></i></a>
                         </li>
                     </ul>
                 </div>
