--- a/index.html
+++ b/index.html
@@ -157,28 +157,28 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 text-center">
               <div class="service-box">
-                <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRtV3gCcOj2g3m3JQzjRiXwtjFY3h6TsMExu7CoWWrDTL8-eISI" width="80" height="80">
+                <img src="https://lh5.ggpht.com/cRhcWANtEi6KHb8GjwYSFH0QDJ7O-zdT5Gu7MdtnnD-hp6D0yyBWxOJfXE7T0EwkIQft=w300" width="80" height="80">
                   <h3>Php</h3>
                   <p class="text-muted"></p>
               </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
               <div class="service-box">
-                  <img src="http://redlijovan.com/img/ht.png" width="80" height="80">
+                  <img src="https://cdn-images-1.medium.com/max/792/1*lJ32Bl-lHWmNMUSiSq17gQ.png" width="80" height="80">
                   <h3>Html / css</h3>
                   <p class="text-muted"></p>
               </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
               <div class="service-box">
-              <img src="http://redlijovan.com/img/my.png" width="80" height="80">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZoCc9gXLDzH22pO3gAB08ozuPYBoNkLKgzxkumWeS4fzucMrd">
                   <h3>Mysql</h3>
                   <p class="text-muted"></p>
               </div>
           </div>
          <div class="col-lg-3 col-md-6 text-center">
               <div class="service-box">
-              <img src="css/image/07.png" width="80" height="80">
+              <img src="https://www.version2.dk/sites/v2/files/styles/large/public/javascriptfeatured.png?itok=_s-6R3Md" width="80" height="80">
                   <h3> JavaScript / jQuery</h3>
               </div>
          </div>
