--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           </div>
           <div class="col-lg-3 col-md-6 text-center">
               <div class="service-box">
-              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZoCc9gXLDzH22pO3gAB08ozuPYBoNkLKgzxkumWeS4fzucMrd">
+              <img src="http://www.iconhot.com/icon/png/coded/512/page-mysql.png" width="80" height="80">
                   <h3>Mysql</h3>
                   <p class="text-muted"></p>
               </div>
